Update spec
