# app/Http/Resources/CocktailIngredientResource.php
@@ -25,9 +25,7 @@ class CocktailIngredientResource extends JsonResource
             'amount_max' => $this->amount_max,
             'units' => $this->units,
             'optional' => (bool) $this->optional,
-            'ingredient_id' => $this->ingredient_id,
-            'name' => $this->ingredient->name,
-            'ingredient_slug' => $this->ingredient->slug,
+            'ingredient' => new IngredientBasicResource($this->ingredient),
             'substitutes' => CocktailIngredientSubstituteResource::collection($this->whenLoaded('substitutes')),
             'note' => $this->note,
             'formatted' => new AmountFormats($this->resource),
