# app/OpenAPI/Schemas/Cocktail.php
@@ -62,7 +62,7 @@ class Cocktail
     ))]
     public array $tags = [];
 
-    #[OAT\Property(type: 'object', properties: [
+    #[OAT\Property(type: 'object', required: ['user', 'average', 'total_votes'], properties: [
         new OAT\Property(type: 'integer', property: 'user', example: 1, nullable: true, description: 'Current user\'s rating'),
         new OAT\Property(type: 'integer', property: 'average', example: 4, description: 'Average rating'),
         new OAT\Property(type: 'integer', property: 'total_votes', example: 12),
@@ -110,7 +110,7 @@ class Cocktail
     #[OAT\Property(property: 'in_shelf')]
     public bool $inShelf = false;
 
-    #[OAT\Property(type: 'object', properties: [
+    #[OAT\Property(type: 'object', required: ['can_edit', 'can_delete', 'can_rate', 'can_add_note'], properties: [
         new OAT\Property(type: 'boolean', property: 'can_edit', example: true),
         new OAT\Property(type: 'boolean', property: 'can_delete', example: true),
         new OAT\Property(type: 'boolean', property: 'can_rate', example: true),
@@ -118,7 +118,7 @@ class Cocktail
     ])]
     public array $access = [];
 
-    #[OAT\Property(type: 'object', properties: [
+    #[OAT\Property(type: 'object', required: ['prev', 'next'], properties: [
         new OAT\Property(type: 'string', nullable: true, property: 'prev', example: 'old-fashioned-1'),
         new OAT\Property(type: 'string', nullable: true, property: 'next', example: 'tom-collins-1'),
     ])]
