# app/OpenAPI/Schemas/ShoppingList.php
@@ -6,7 +6,7 @@ namespace Kami\Cocktail\OpenAPI\Schemas;
 
 use OpenApi\Attributes as OAT;
 
-#[OAT\Schema()]
+#[OAT\Schema(required: ['ingredient', 'quantity'])]
 class ShoppingList
 {
     #[OAT\Property()]
